Changement d'encodage feature : LabelEncoder() -> OrdinalEncoder()

--- a/projet.ipynb
+++ b/projet.ipynb
@@ -15723,7 +15723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "60931346aa26bf34",
    "metadata": {
     "ExecuteTime": {
@@ -15731,7 +15731,25 @@
      "start_time": "2025-06-10T14:15:38.820218Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Evaluation pre-optimisation des hyperparametres\n",
+      "Accuracy : 0.8691 (the higher the better)\n",
+      "R2 : 0.2838 (the higher the better)\n",
+      "MAE : 0.1309 (the lower the better)\n",
+      "RMSE : 0.1309 (the lower the better)\n",
+      "Meilleurs hyperparamètres : {}\n",
+      "=== Evaluation post-optimisation des hyperparametres\n",
+      "Accuracy : 0.8691 (the higher the better)\n",
+      "R2 : 0.2838 (the higher the better)\n",
+      "MAE : 0.1309 (the lower the better)\n",
+      "RMSE : 0.1309 (the lower the better)\n"
+     ]
+    }
+   ],
    "source": [
     "# Entrainement d'un modèle de Stacking\n",
     "from sklearn.ensemble import StackingClassifier\n",
