--- a/projet.ipynb
+++ b/projet.ipynb
@@ -9,11 +9,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "75e2db09",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-=======
->>>>>>> bc98bec4869e791cfba9e8e6685ba9753f412b4b
    "id": "a8ac31df",
    "metadata": {
     "ExecuteTime": {
@@ -298,10 +300,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 1,
-=======
->>>>>>> bc98bec4869e791cfba9e8e6685ba9753f412b4b
    "id": "773202c2",
    "metadata": {
     "ExecuteTime": {
@@ -309,28 +307,9 @@
      "start_time": "2025-06-12T14:07:26.950858Z"
     }
    },
-<<<<<<< HEAD
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df_adult' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdf_adult\u001b[49m.head()\n",
-      "\u001b[31mNameError\u001b[39m: name 'df_adult' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "df_adult.head()"
-   ]
-=======
    "source": [],
    "outputs": [],
    "execution_count": null
->>>>>>> bc98bec4869e791cfba9e8e6685ba9753f412b4b
   },
   {
    "cell_type": "markdown",
@@ -775,10 +754,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-=======
->>>>>>> bc98bec4869e791cfba9e8e6685ba9753f412b4b
    "id": "136d56a2",
    "metadata": {
     "ExecuteTime": {
@@ -791,17 +766,6 @@
    ],
    "outputs": [
     {
-<<<<<<< HEAD
-     "ename": "NameError",
-     "evalue": "name 'df_adult' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdf_adult\u001b[49m.duplicated()\n",
-      "\u001b[31mNameError\u001b[39m: name 'df_adult' is not defined"
-     ]
-=======
      "data": {
       "text/plain": [
        "name   age          workclass  fnlwgt      education  education-num  \\\n",
@@ -1385,7 +1349,6 @@
      "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
->>>>>>> bc98bec4869e791cfba9e8e6685ba9753f412b4b
     }
    ],
    "execution_count": 103
@@ -2112,7 +2075,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "machine_learning",
    "language": "python",
    "name": "python3"
   },
@@ -2126,7 +2089,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
