[FIX] suppression education et utilisation education-num

--- a/projet.ipynb
+++ b/projet.ipynb
@@ -237,23 +237,23 @@
    "id": "7dab83b8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T10:15:01.553912Z",
-     "start_time": "2025-06-19T10:15:01.445026Z"
+     "end_time": "2025-06-19T11:02:55.179311Z",
+     "start_time": "2025-06-19T11:02:55.079432Z"
     }
    },
    "source": [
     "df_adult = pd.read_csv(\"./Data/adult.data\", header=None)"
    ],
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 50
   },
   {
    "cell_type": "code",
    "id": "a17d559b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T10:15:01.582434Z",
-     "start_time": "2025-06-19T10:15:01.574183Z"
+     "end_time": "2025-06-19T11:03:03.870287Z",
+     "start_time": "2025-06-19T11:03:03.861115Z"
     }
    },
    "source": [
@@ -266,12 +266,12 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 51
   },
   {
    "cell_type": "markdown",
@@ -286,8 +286,8 @@
    "id": "47221cbf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T10:15:16.534215Z",
-     "start_time": "2025-06-19T10:15:16.508782Z"
+     "end_time": "2025-06-19T11:03:03.962546Z",
+     "start_time": "2025-06-19T11:03:03.938509Z"
     }
    },
    "source": [
@@ -461,20 +461,20 @@
        "</div>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 52
   },
   {
    "cell_type": "code",
    "id": "107289ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T10:15:16.578295Z",
-     "start_time": "2025-06-19T10:15:16.572090Z"
+     "end_time": "2025-06-19T11:03:12.849952Z",
+     "start_time": "2025-06-19T11:03:12.843906Z"
     }
    },
    "source": [
@@ -487,20 +487,20 @@
        "(32561, 15)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 53
   },
   {
    "cell_type": "code",
    "id": "6d032d69",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T10:15:16.680122Z",
-     "start_time": "2025-06-19T10:15:16.672254Z"
+     "end_time": "2025-06-19T11:03:12.988574Z",
+     "start_time": "2025-06-19T11:03:12.979830Z"
     }
    },
    "source": [
@@ -517,20 +517,20 @@
        "      dtype='object', name='name')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 54
   },
   {
    "cell_type": "code",
    "id": "3f021163",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T10:15:16.931764Z",
-     "start_time": "2025-06-19T10:15:16.889928Z"
+     "end_time": "2025-06-19T11:03:13.214649Z",
+     "start_time": "2025-06-19T11:03:13.158336Z"
     }
    },
    "source": [
@@ -665,20 +665,20 @@
        "</div>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 55
   },
   {
    "cell_type": "code",
    "id": "b18aed3e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T10:15:17.215983Z",
-     "start_time": "2025-06-19T10:15:17.186065Z"
+     "end_time": "2025-06-19T11:03:21.472196Z",
+     "start_time": "2025-06-19T11:03:21.438190Z"
     }
    },
    "source": [
@@ -707,20 +707,20 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 56
   },
   {
    "cell_type": "code",
    "id": "136d56a2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T10:15:17.514864Z",
-     "start_time": "2025-06-19T10:15:17.407958Z"
+     "end_time": "2025-06-19T11:03:21.859685Z",
+     "start_time": "2025-06-19T11:03:21.721486Z"
     }
    },
    "source": [
@@ -777,18 +777,18 @@
        "</div>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 57
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T10:18:03.918225Z",
-     "start_time": "2025-06-19T10:18:03.899624Z"
+     "end_time": "2025-06-19T11:03:22.127359Z",
+     "start_time": "2025-06-19T11:03:22.113561Z"
     }
    },
    "cell_type": "code",
@@ -804,20 +804,20 @@
        "       ' Preschool', ' 12th'], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 16
+   "execution_count": 58
   },
   {
    "cell_type": "code",
    "id": "f1a4235f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T10:15:18.228021Z",
-     "start_time": "2025-06-19T10:15:18.184302Z"
+     "end_time": "2025-06-19T11:03:22.373081Z",
+     "start_time": "2025-06-19T11:03:22.319025Z"
     }
    },
    "source": [
@@ -853,7 +853,7 @@
      ]
     }
    ],
-   "execution_count": 15
+   "execution_count": 59
   },
   {
    "cell_type": "markdown",
@@ -872,8 +872,8 @@
    "id": "4f71c629",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T09:55:38.797363Z",
-     "start_time": "2025-06-19T09:55:35.876377Z"
+     "end_time": "2025-06-19T11:03:32.833414Z",
+     "start_time": "2025-06-19T11:03:30.715750Z"
     }
    },
    "source": [
@@ -916,15 +916,55 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 15
+   "execution_count": 60
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-19T11:03:40.788271Z",
+     "start_time": "2025-06-19T11:03:40.774611Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "tmp_df=df_adult.drop_duplicates(['education','education-num'])[['education','education-num']]\n",
+    "print(tmp_df.sort_values('education-num', ascending=True))"
+   ],
+   "id": "de7edeafdb127789",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name      education  education-num\n",
+      "224       Preschool              1\n",
+      "160         1st-4th              2\n",
+      "56          5th-6th              3\n",
+      "15          7th-8th              4\n",
+      "6               9th              5\n",
+      "77             10th              6\n",
+      "3              11th              7\n",
+      "415            12th              8\n",
+      "2           HS-grad              9\n",
+      "10     Some-college             10\n",
+      "14        Assoc-voc             11\n",
+      "13       Assoc-acdm             12\n",
+      "0         Bachelors             13\n",
+      "5           Masters             14\n",
+      "52      Prof-school             15\n",
+      "20        Doctorate             16\n"
+     ]
+    }
+   ],
+   "execution_count": 61
   },
   {
    "cell_type": "code",
    "id": "6c06b28a72dceb89",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T09:55:49.803951Z",
-     "start_time": "2025-06-19T09:55:49.777210Z"
+     "end_time": "2025-06-19T11:03:48.688584Z",
+     "start_time": "2025-06-19T11:03:48.669447Z"
     }
    },
    "source": [
@@ -949,7 +989,7 @@
      ]
     }
    ],
-   "execution_count": 16
+   "execution_count": 62
   },
   {
    "cell_type": "markdown",
@@ -964,8 +1004,8 @@
    "id": "286579e9e94f42e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T10:21:05.052082Z",
-     "start_time": "2025-06-19T10:21:05.023940Z"
+     "end_time": "2025-06-19T11:15:26.389673Z",
+     "start_time": "2025-06-19T11:15:26.374507Z"
     }
    },
    "source": [
@@ -980,20 +1020,18 @@
     "    for col in [\"workclass\", \"occupation\", \"native-country\"]:\n",
     "        df_new[col].fillna(df_new[col].mode()[0], inplace=True)\n",
     "\n",
-    "    # Retrait de la variable education-num (redondance et encodage pas necessairement ordinal\n",
-    "    df_new.drop(\"education-num\", inplace=True, axis=1)\n",
+    "    # Retrait de la variable education (redondance et deja encodée de manière ordinale par education-num)\n",
+    "    print(df_new.columns)\n",
+    "    df_new.drop('education', inplace=True, axis=1)\n",
+    "\n",
     "\n",
     "    # Selection des different types de variables\n",
     "    categorical_columns = df_new.select_dtypes(include=['object']).columns\n",
     "    numerical_columns = df_new.select_dtypes(include=['number']).columns\n",
     "    # Retrait de la variable cible des colonnes categorielles à traiter\n",
     "    categorical_columns = categorical_columns.drop('income')\n",
-    "\n",
-    "    education_order = [[\n",
-    "        ' Preschool', ' 1st-4th', ' 5th-6th', ' 7th-8th', ' 9th', ' 10th',\n",
-    "        ' 11th', ' 12th', ' HS-grad', ' Some-college', ' Assoc-voc',\n",
-    "        ' Assoc-acdm', ' Bachelors', ' Masters', ' Prof-school', ' Doctorate'\n",
-    "    ]]\n",
+    "    # Retrait de la variable education-num des colonnes numeriques à traiter\n",
+    "    numerical_columns = numerical_columns.drop('education-num')\n",
     "\n",
     "    # Pretraitement des features\n",
     "    if preprocessor is None:\n",
@@ -1001,19 +1039,19 @@
     "            transformers = [\n",
     "                ('numerical', StandardScaler(), numerical_columns),\n",
     "                # La feature education est ordonnée\n",
-    "                ('categorical', OneHotEncoder(sparse_output=False), categorical_columns.drop(\"education\")),\n",
-    "                # Education utilise OrdinalEncoder\n",
-    "                ('categ_ordinal', OrdinalEncoder(categories=education_order), [\"education\"])\n",
+    "                ('categorical', OneHotEncoder(sparse_output=False), categorical_columns),\n",
+    "                ('education-num', \"passthrough\", ['education-num'])\n",
     "            ]\n",
     "        )\n",
     "        preprocessor.fit(df_new.drop(\"income\", axis=1))\n",
     "    features_processed = preprocessor.transform(df_new.drop('income', axis=1))\n",
     "    column_names = (\n",
     "        preprocessor.named_transformers_['numerical'].get_feature_names_out(numerical_columns).tolist() +\n",
-    "        preprocessor.named_transformers_['categorical'].get_feature_names_out(categorical_columns.drop(\"education\")).tolist() +\n",
-    "        preprocessor.named_transformers_['categ_ordinal'].get_feature_names_out(['education']).tolist()\n",
+    "        preprocessor.named_transformers_['categorical'].get_feature_names_out(categorical_columns).tolist() +\n",
+    "        preprocessor.named_transformers_['education-num'].get_feature_names_out(['education-num']).tolist()\n",
     "    )\n",
     "    df_processed = pd.DataFrame(features_processed, columns=column_names)\n",
+    "\n",
     "    # Pretraitement de la variable cible, (0: <=50K, 1: >50K)\n",
     "    label_encoder = LabelEncoder()\n",
     "    df_processed['income'] = label_encoder.fit_transform(df_new['income'])\n",
@@ -1022,7 +1060,7 @@
     "    return df_processed, preprocessor"
    ],
    "outputs": [],
-   "execution_count": 21
+   "execution_count": 78
   },
   {
    "cell_type": "markdown",
@@ -1041,23 +1079,12 @@
    "id": "aa55e6c1908508db",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T10:21:15.157282Z",
-     "start_time": "2025-06-19T10:21:14.430072Z"
+     "end_time": "2025-06-19T11:15:35.836882Z",
+     "start_time": "2025-06-19T11:15:35.185684Z"
     }
    },
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
-    "\n",
-    "# Creation de différents sets\n",
-    "# X_train, X_test, y_train, y_test = train_test_split(df_adult_enco.drop(columns=[\"income\"]), df_adult_enco[\"income\"], test_size=0.2, random_state=69)\n",
-    "#\n",
-    "# # On normalise les variables quantitatives sur les données de train (StandardScaler pour l'instant)\n",
-    "# numerical_columns = df_adult.select_dtypes(include=['int64', 'float64']).columns\n",
-    "# numerical_scaler = StandardScaler()\n",
-    "# numerical_scaler.fit(X_train[numerical_columns])\n",
-    "# X_train[numerical_columns] = numerical_scaler.transform(X_train[numerical_columns])\n",
-    "# X_test[numerical_columns] = numerical_scaler.transform(X_test[numerical_columns])\n",
-    "\n",
     "# Import des données de test\n",
     "df_adult_test = pd.read_csv(\"./Data/adult.test\", header=None)\n",
     "df_adult_test.columns = adult_columns\n",
@@ -1087,13 +1114,20 @@
     "    print(f\"R2 : {r2:.4f} (the higher the better)\")\n",
     "    print(f\"MAE : {mae:.4f} (the lower the better)\")\n",
     "    print(f\"RMSE : {rmse:.4f} (the lower the better)\")\n",
-    "    return accuracy, recall, neg_recall, f1, r2, mae, rmse"
+    "    return accuracy, recall, neg_recall, f1, r2, mae, rmse\n",
+    "\n",
+    "print(X_train.columns)"
    ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Index(['age', 'workclass', 'fnlwgt', 'education', 'education-num',\n",
+      "       'marital-status', 'occupation', 'relationship', 'race', 'sex',\n",
+      "       'capital-gain', 'capital-loss', 'hours-per-week', 'native-country',\n",
+      "       'income'],\n",
+      "      dtype='object', name='name')\n",
       "income\n",
       "<=50K    24698\n",
       ">50K      7839\n",
@@ -1102,6 +1136,11 @@
       "0    24698\n",
       "1     7839\n",
       "Name: count, dtype: int64\n",
+      "Index(['age', 'workclass', 'fnlwgt', 'education', 'education-num',\n",
+      "       'marital-status', 'occupation', 'relationship', 'race', 'sex',\n",
+      "       'capital-gain', 'capital-loss', 'hours-per-week', 'native-country',\n",
+      "       'income'],\n",
+      "      dtype='object', name='name')\n",
       "income\n",
       "<=50K.    12435\n",
       ">50K.      3846\n",
@@ -1109,11 +1148,55 @@
       "income\n",
       "0    12435\n",
       "1     3846\n",
-      "Name: count, dtype: int64\n"
+      "Name: count, dtype: int64\n",
+      "Index(['age', 'fnlwgt', 'capital-gain', 'capital-loss', 'hours-per-week',\n",
+      "       'workclass_ Federal-gov', 'workclass_ Local-gov',\n",
+      "       'workclass_ Never-worked', 'workclass_ Private',\n",
+      "       'workclass_ Self-emp-inc', 'workclass_ Self-emp-not-inc',\n",
+      "       'workclass_ State-gov', 'workclass_ Without-pay',\n",
+      "       'marital-status_ Divorced', 'marital-status_ Married-AF-spouse',\n",
+      "       'marital-status_ Married-civ-spouse',\n",
+      "       'marital-status_ Married-spouse-absent',\n",
+      "       'marital-status_ Never-married', 'marital-status_ Separated',\n",
+      "       'marital-status_ Widowed', 'occupation_ Adm-clerical',\n",
+      "       'occupation_ Armed-Forces', 'occupation_ Craft-repair',\n",
+      "       'occupation_ Exec-managerial', 'occupation_ Farming-fishing',\n",
+      "       'occupation_ Handlers-cleaners', 'occupation_ Machine-op-inspct',\n",
+      "       'occupation_ Other-service', 'occupation_ Priv-house-serv',\n",
+      "       'occupation_ Prof-specialty', 'occupation_ Protective-serv',\n",
+      "       'occupation_ Sales', 'occupation_ Tech-support',\n",
+      "       'occupation_ Transport-moving', 'relationship_ Husband',\n",
+      "       'relationship_ Not-in-family', 'relationship_ Other-relative',\n",
+      "       'relationship_ Own-child', 'relationship_ Unmarried',\n",
+      "       'relationship_ Wife', 'race_ Amer-Indian-Eskimo',\n",
+      "       'race_ Asian-Pac-Islander', 'race_ Black', 'race_ Other', 'race_ White',\n",
+      "       'sex_ Female', 'sex_ Male', 'native-country_ Cambodia',\n",
+      "       'native-country_ Canada', 'native-country_ China',\n",
+      "       'native-country_ Columbia', 'native-country_ Cuba',\n",
+      "       'native-country_ Dominican-Republic', 'native-country_ Ecuador',\n",
+      "       'native-country_ El-Salvador', 'native-country_ England',\n",
+      "       'native-country_ France', 'native-country_ Germany',\n",
+      "       'native-country_ Greece', 'native-country_ Guatemala',\n",
+      "       'native-country_ Haiti', 'native-country_ Holand-Netherlands',\n",
+      "       'native-country_ Honduras', 'native-country_ Hong',\n",
+      "       'native-country_ Hungary', 'native-country_ India',\n",
+      "       'native-country_ Iran', 'native-country_ Ireland',\n",
+      "       'native-country_ Italy', 'native-country_ Jamaica',\n",
+      "       'native-country_ Japan', 'native-country_ Laos',\n",
+      "       'native-country_ Mexico', 'native-country_ Nicaragua',\n",
+      "       'native-country_ Outlying-US(Guam-USVI-etc)', 'native-country_ Peru',\n",
+      "       'native-country_ Philippines', 'native-country_ Poland',\n",
+      "       'native-country_ Portugal', 'native-country_ Puerto-Rico',\n",
+      "       'native-country_ Scotland', 'native-country_ South',\n",
+      "       'native-country_ Taiwan', 'native-country_ Thailand',\n",
+      "       'native-country_ Trinadad&Tobago', 'native-country_ United-States',\n",
+      "       'native-country_ Vietnam', 'native-country_ Yugoslavia',\n",
+      "       'education-num'],\n",
+      "      dtype='object')\n"
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 79
   },
   {
    "cell_type": "markdown",
