[FEAT] Ficihers avec differentes traces d'exec/graphes

--- a/projet.ipynb
+++ b/projet.ipynb
@@ -1092,7 +1092,7 @@
     "\n",
     "def eval_model(model, X_test, y_test):\n",
     "    \"\"\"\n",
-    "    :return: accuracy, recall, neg_recall, f1, r2, mae, rmse, accuracy_neg_pred, accuracy_pos_pred\n",
+    "    :return: accuracy, recall, neg_recall, f1, mae, rmse, accuracy_neg_pred, accuracy_pos_pred\n",
     "    \"\"\"\n",
     "    y_pred = model.predict(X_test)\n",
     "    accuracy = accuracy_score(y_test, y_pred)\n",
@@ -1106,10 +1106,9 @@
     "    print(f\"Recall : {recall:.4f} (the higher the better) (best for us)\")\n",
     "    print(f\"Negative recall : {neg_recall:.4f} (the lower the better)\")\n",
     "    print(f\"F1 : {f1:.4f} (the higher the better)\")\n",
-    "    print(f\"R2 : {r2:.4f} (the higher the better)\")\n",
     "    print(f\"MAE : {mae:.4f} (the lower the better)\")\n",
     "    print(f\"RMSE : {rmse:.4f} (the lower the better)\")\n",
-    "    return accuracy, recall, neg_recall, f1, r2, mae, rmse\n"
+    "    return accuracy, recall, neg_recall, f1, mae, rmse\n"
    ],
    "outputs": [
     {
@@ -2486,7 +2485,7 @@
     "df_adult_test_new, _ = treat_df(df_adult_test, fitted_preprocessor)\n",
     "X_test, y_test = df_adult_test_new.drop(columns=[\"income\"]), df_adult_test_new[\"income\"]\n",
     "\n",
-    "df_models_res = pd.DataFrame(columns=[\"name\", \"accuracy\", \"recall\", \"negative recall\", \"f1\", \"r2\", \"mae\", \"rmse\"])\n",
+    "df_models_res = pd.DataFrame(columns=[\"name\", \"accuracy\", \"recall\", \"negative recall\", \"f1\", \"mae\", \"rmse\"])\n",
     "\n",
     "for classifier_name, model in best_models.items():\n",
     "    model.fit(X_train, y_train)\n",
