--- a/AED.ipynb
+++ b/AED.ipynb
@@ -4653,7 +4653,7 @@
     "\n",
     "## Analyse univariée\n",
     "### Variables catégorielles\n",
-    "Nous remarquons que les variable `education`et `education-num` représentent la même information qualitative. Nous vérifions qu'`education-num` est bien ordonnée."
+    "Nous remarquons que les variables `education`et `education-num` représentent la même information qualitative. Nous vérifions qu'`education-num` est bien ordonnée."
    ]
   },
   {
@@ -4775,7 +4775,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 68,
+   "id": "b2f24df0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 48789 entries, 0 to 16279\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   age             48789 non-null  float64\n",
+      " 1   workclass       45994 non-null  object \n",
+      " 2   fnlwgt          48789 non-null  float64\n",
+      " 3   education-num   48789 non-null  int64  \n",
+      " 4   marital-status  48789 non-null  object \n",
+      " 5   occupation      45984 non-null  object \n",
+      " 6   relationship    48789 non-null  object \n",
+      " 7   race            48789 non-null  object \n",
+      " 8   sex             48789 non-null  int64  \n",
+      " 9   capital-gain    48789 non-null  float64\n",
+      " 10  capital-loss    48789 non-null  float64\n",
+      " 11  hours-per-week  48789 non-null  float64\n",
+      " 12  native-country  47933 non-null  object \n",
+      " 13  income          48789 non-null  int64  \n",
+      "dtypes: float64(5), int64(3), object(6)\n",
+      "memory usage: 5.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_entire_adult.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "cf93bc3c",
    "metadata": {},
    "outputs": [
@@ -4871,7 +4909,7 @@
     }
    ],
    "source": [
-    "# Compter le nombre de chaque modalité sous forme d'un graphique de camebert\n",
+    "# Compter le nombre de chaque modalité sous forme d'un graphique de camembert\n",
     "for col in vars_cat:\n",
     "    plt.figure()\n",
     "    df_entire_adult[col].value_counts().plot.pie()\n",
@@ -4983,7 +5021,8 @@
    "id": "c842d4db",
    "metadata": {},
    "source": [
-    "- `hours-per-week` a un distribution très irrégulière avec le plus de données présentes dans 39.\n",
+    "- `hours-per-week` a une distribution très irrégulière avec le plus de données présentes dans 39.\n",
+    "- `fnlwgt`a une distribution irrégulière avec le plus de données dans 0.2.\n",
     "- `capital-gain` présente une asymétrie à droite"
    ]
   },
@@ -5183,7 +5222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 71,
    "id": "0dee893f",
    "metadata": {},
    "outputs": [
@@ -5284,6 +5323,14 @@
     "    sns.heatmap(pd.crosstab(df_entire_adult['income'], df_entire_adult[feature]), annot=True, fmt='d')\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e413cbb6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
