--- a/AED.ipynb
+++ b/AED.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 187,
    "id": "889541d7",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 188,
    "id": "76deada3",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 190,
    "id": "b14038f3",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 191,
    "id": "983985a1",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 192,
    "id": "38a320ac",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
        "True"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 193,
    "id": "d4015009",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "4             0             0              40            Cuba   <=50K  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 194,
    "id": "8d954f37",
    "metadata": {},
    "outputs": [
@@ -504,7 +504,7 @@
        "4             0              30   United-States   <=50K.  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 195,
    "id": "a28798c6",
    "metadata": {},
    "outputs": [
@@ -675,7 +675,7 @@
        "4             0             0              40            Cuba   <=50K  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 196,
    "id": "990d8950",
    "metadata": {},
    "outputs": [
@@ -696,7 +696,7 @@
        "(32561, 15)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 197,
    "id": "9893816c",
    "metadata": {},
    "outputs": [
@@ -717,7 +717,7 @@
        "(16280, 15)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 198,
    "id": "ed29aa62",
    "metadata": {},
    "outputs": [
@@ -742,7 +742,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 199,
    "id": "0d0c3679",
    "metadata": {},
    "outputs": [
@@ -767,7 +767,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 200,
    "id": "ab614548",
    "metadata": {},
    "outputs": [
@@ -910,7 +910,7 @@
        "max         99.000000  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 201,
    "id": "a2832365",
    "metadata": {},
    "outputs": [
@@ -1053,7 +1053,7 @@
        "max         99.000000  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 202,
    "id": "7fa892f8",
    "metadata": {},
    "outputs": [
@@ -1089,7 +1089,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 203,
    "id": "ab670ceb",
    "metadata": {},
    "outputs": [
@@ -1125,7 +1125,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 204,
    "id": "1c4ce398",
    "metadata": {},
    "outputs": [
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 205,
    "id": "ff86cc27",
    "metadata": {},
    "outputs": [
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 206,
    "id": "b07dd6a5",
    "metadata": {},
    "outputs": [],
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 207,
    "id": "e0a10d10",
    "metadata": {},
    "outputs": [
@@ -1368,7 +1368,7 @@
        "max         99.000000  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 208,
    "id": "b5ab02e6",
    "metadata": {},
    "outputs": [
@@ -1511,7 +1511,7 @@
        "max         99.000000  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1522,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 209,
    "id": "eb12604c",
    "metadata": {},
    "outputs": [
@@ -1547,7 +1547,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1558,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 210,
    "id": "7fb9672f",
    "metadata": {},
    "outputs": [
@@ -1568,7 +1568,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1590,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 211,
    "id": "6a5d9b60",
    "metadata": {},
    "outputs": [
@@ -1615,7 +1615,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1626,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 212,
    "id": "afd3c810",
    "metadata": {},
    "outputs": [
@@ -1636,7 +1636,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1657,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 213,
    "id": "10838547",
    "metadata": {},
    "outputs": [
@@ -1682,7 +1682,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1693,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 214,
    "id": "0adfc366",
    "metadata": {},
    "outputs": [
@@ -1703,7 +1703,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1724,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 215,
    "id": "804a8472",
    "metadata": {},
    "outputs": [
@@ -1758,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 216,
    "id": "770fe5a6",
    "metadata": {},
    "outputs": [
@@ -2343,7 +2343,7 @@
        "32404              40   United-States   <=50K  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2358,7 +2358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 217,
    "id": "8f3e9017",
    "metadata": {},
    "outputs": [
@@ -2525,7 +2525,7 @@
        "15959   <=50K  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2536,7 +2536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 218,
    "id": "70289e6e",
    "metadata": {},
    "outputs": [
@@ -3737,7 +3737,7 @@
        "15959              10   United-States   <=50K  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3748,7 +3748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 219,
    "id": "9cdfb907",
    "metadata": {},
    "outputs": [
@@ -3801,7 +3801,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3813,7 +3813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 220,
    "id": "b0251aa9",
    "metadata": {},
    "outputs": [
@@ -3866,7 +3866,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3878,7 +3878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 221,
    "id": "c9075a54",
    "metadata": {},
    "outputs": [
@@ -3931,7 +3931,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3951,7 +3951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 222,
    "id": "fe70abf4",
    "metadata": {},
    "outputs": [
@@ -3990,7 +3990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 223,
    "id": "3e887637",
    "metadata": {},
    "outputs": [
@@ -4029,7 +4029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 224,
    "id": "787d906d",
    "metadata": {},
    "outputs": [
@@ -4068,7 +4068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 225,
    "id": "9af7be60",
    "metadata": {},
    "outputs": [
@@ -4078,7 +4078,7 @@
        "(48789, 15)"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4089,7 +4089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 226,
    "id": "8022dce7",
    "metadata": {},
    "outputs": [
@@ -4114,7 +4114,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4125,7 +4125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 227,
    "id": "668e55cc",
    "metadata": {},
    "outputs": [
@@ -4137,7 +4137,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4189,7 +4189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 228,
    "id": "9fafe718",
    "metadata": {},
    "outputs": [],
@@ -4203,7 +4203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 229,
    "id": "78d5ecbc",
    "metadata": {},
    "outputs": [
@@ -4363,7 +4363,7 @@
        "4             0             0              40            Cuba       0  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4374,7 +4374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 230,
    "id": "3c9c1ead",
    "metadata": {},
    "outputs": [
@@ -4413,7 +4413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 231,
    "id": "965ef342",
    "metadata": {},
    "outputs": [],
@@ -4433,7 +4433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 232,
    "id": "ec1f456e",
    "metadata": {},
    "outputs": [
@@ -4446,7 +4446,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4457,7 +4457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 233,
    "id": "493e46d8",
    "metadata": {},
    "outputs": [
@@ -4470,7 +4470,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4481,7 +4481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 234,
    "id": "eaedb8f6",
    "metadata": {},
    "outputs": [
@@ -4494,7 +4494,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4505,7 +4505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 235,
    "id": "f90b9cdb",
    "metadata": {},
    "outputs": [
@@ -4538,7 +4538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 236,
    "id": "91e9bfa9",
    "metadata": {},
    "outputs": [
@@ -4566,7 +4566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 237,
    "id": "adae9dc7",
    "metadata": {},
    "outputs": [
@@ -4594,7 +4594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 238,
    "id": "0633def7",
    "metadata": {},
    "outputs": [
@@ -4622,7 +4622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 239,
    "id": "11a70355",
    "metadata": {},
    "outputs": [
@@ -4635,7 +4635,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4658,7 +4658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 240,
    "id": "630dbc7e",
    "metadata": {},
    "outputs": [
@@ -4701,7 +4701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 241,
    "id": "b662fc72",
    "metadata": {},
    "outputs": [],
@@ -4727,7 +4727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 242,
    "id": "7cb29399",
    "metadata": {},
    "outputs": [
@@ -4775,7 +4775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 243,
    "id": "b2f24df0",
    "metadata": {},
    "outputs": [
@@ -4813,7 +4813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 244,
    "id": "cf93bc3c",
    "metadata": {},
    "outputs": [
@@ -4932,7 +4932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 245,
    "id": "81ecbc58",
    "metadata": {},
    "outputs": [
@@ -4970,7 +4970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 246,
    "id": "25e580ed",
    "metadata": {},
    "outputs": [
@@ -4980,7 +4980,7 @@
        "Index(['age', 'fnlwgt', 'capital-gain', 'capital-loss', 'hours-per-week'], dtype='object')"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4992,7 +4992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 247,
    "id": "f74f89cd",
    "metadata": {},
    "outputs": [
@@ -5086,7 +5086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 248,
    "id": "7675cdc5",
    "metadata": {},
    "outputs": [
@@ -5111,7 +5111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 249,
    "id": "940a9057",
    "metadata": {},
    "outputs": [
@@ -5137,7 +5137,7 @@
    ],
    "source": [
     "plt.figure(figsize=(18,18))\n",
-    "pp = sns.pairplot(df_entire_adult[cont_features])\n",
+    "pp = sns.pairplot(df_entire_adult[cont_features], dropna=True)\n",
     "pp.fig.suptitle(\"Pairplot des variables numériques\", y=1.02, fontsize=18)\n",
     "plt.savefig('figures/AED/pairplot/quant_pairplot.png', bbox_inches='tight')\n",
     "plt.show()"
@@ -5154,7 +5154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 250,
    "id": "04457ef2",
    "metadata": {},
    "outputs": [],
@@ -5165,7 +5165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 251,
    "id": "a403de3a",
    "metadata": {},
    "outputs": [
@@ -5175,7 +5175,7 @@
        "((37108, 14), (11681, 14))"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5194,7 +5194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 252,
    "id": "e61999aa",
    "metadata": {},
    "outputs": [
@@ -5278,7 +5278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 253,
    "id": "0dee893f",
    "metadata": {},
    "outputs": [
